--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,13 +1,13 @@
 {
     "compilerOptions": {
-        "outFile": "./frontend/static/components.js",
+        "outFile": "../frontend/static/components.js",
         "target": "ES6",
         "module": "AMD",
         "strict": true,
-        "rootDir": "./frontend/components",
+        "rootDir": "../frontend/components",
         "sourceMap": false
     },
     "include": [
-        "./frontend/components/**/*.ts"
+        "../frontend/components/**/*.ts"
     ]
 }
