--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-httpx
-mypy
-pydantic
-pydantic[email]
-sqlmodel
-uvicorn
+fastapi>=0.115.12
+httpx>=0.28.1
+mypy>=1.15.0
+pydantic>=2.11.5
+pydantic[email]>=2.11.5
+sqlmodel>=0.0.24
+uvicorn>=0.34.2
