--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,13 @@
             "command": ".venv/bin/mypy --disallow-untyped-defs --disallow-incomplete-defs --disable-error-code=import-untyped app test",
             "problemMatcher": [],
             "group": "test",
+        },
+        {
+            "type": "shell",
+            "label": "unittests",
+            "command": ".venv/bin/python -m unittest discover --failfast --verbose --start-directory ./test --pattern *_test.py",
+            "problemMatcher": [],
+            "group": "test",
         }
     ]
 }
