--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=80.9.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "fastapi-template"
+name = "app"
 version = "0.0.1"
 authors = [
   { name="John Doe", email="john.doe@example.com" },
