--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
 CONFIG = config.dev.json
 LOGGING = logging.dev.json
+
+# Uvicorn configuration
+HOST = 0.0.0.0
+PORT = 8000
+
+# Database for development
 DBNAME = dev.db
+
+# Database for deployment (docker)
+POSTGRES_USER = tuapp
+POSTGRES_PASSWORD =
+POSTGRES_HOST = database
+POSTGRES_DATABASE = db
+POSTGRES_PORT = 5432
