--- a/app/config/config.prod.json
+++ b/app/config/config.prod.json
@@ -28,7 +28,7 @@
         "max_age": 600
     },
     "database": {
-        "url": "sqlite:///{{DBNAME}}",
+        "url": "postgresql://{{POSTGRES_USER}}:{{POSTGRES_PASSWORD}}@{{POSTGRES_HOST}}:{{POSTGRES_PORT}}/{{POSTGRES_DATABASE}}",
         "echo": false,
         "pool_size": 5,
         "max_overflow": 10
